<resources>
    <string name="app_name">FashionShop</string>
    <string name="change_background">Thay đổi hình nền</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_wishlist">Wishlist</string>
    <string name="title_cart">Cart</string>
    <string name="title_search">Search</string>
    <string name="title_product_detail">Product detail</string>
    <string name="title_settings">Settings</string>
    <string name="title_profile">Profile</string>
    <string name="title_notification">Notification</string>
    <string name="title_notification_detail">Notification detail</string>
    <string name="title_checkout">Checkout</string>
    <string name="title_order_history">Order history</string>
    <string-array name="languages">
        <item>English</item>
        <item>Vietnamese</item>
        <item>Japanese</item>
        <item>Korean</item>
        <item>Chinese</item>
        <item>French</item>
        <item>Laos</item>
        <item>ThaiLand</item>
        <item>America</item>
    </string-array>
</resources>